index scroll sections setup

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               </a>
             </div>
             <ul class="links">
-              <li class="active">
+              <li >
                 <i class="fas fa-lightbulb"></i>
                 <a href="#skills" title="web development skills" data-after="skills"class="scroll-link scroll-li">skills</a>
               </li>
@@ -122,13 +122,13 @@
   <!-- End of Hero Section-->
 
 <!-- padding section -->
-<section id="hero-logo" class="section-pad pad-logo">
+<div id="hero-logo" class="section-pad pad-logo">
   <figure data-scroll>
     <a title="Shakex Sempe: front end web developer" href="#skills">
       <img src="img/shakex-logo-min.png" loading="lazy" alt="shakex sempe logo">
     </a>
   </figure>
-</section>
+</div>
 <!-- end of padding section -->
 
   <!--Skills section-->
@@ -332,23 +332,18 @@
         <img src="img/syntex-1.jpg" alt="github progress">
       </figure>
       <!-- end of skills img -->
-      <!-- <figure data-scroll>
-        <a href="#projects">
-          <img src="img/syntex-1.jpg" loading="lazy" alt="screens">
-        </a>
-      </figure> -->
     </div>
   </section>
   <!--End of Skills section-->
 
   <!-- padding section -->
-  <section id="projects-pad" class="section-pad pad-intro">
+  <div id="projects-pad" class="section-pad pad-intro">
     <figure data-scroll>
       <a title="github contribution activity" href="#projects">
         <img src="img/git-min.png" loading="lazy" alt="screens">
       </a>
     </figure>
-  </section>
+  </div>
   <!-- end of padding section -->
 
   <!--Projects Section-->
@@ -364,13 +359,13 @@
   <!--End of Projects Section-->
 
   <!-- padding section -->
-  <section class="section-pad pad-me">
+  <div class="section-pad pad-me">
     <figure data-scroll>
       <a title="me: boitumelo sempe" href="#about">
         <img src="img/me-min.jpg" loading="lazy" alt="screens">
       </a>
     </figure>
-  </section>
+  </div>
   <!-- end of padding section -->
 
   <!--About Section-->
@@ -421,13 +416,13 @@
   <!--End of About Section-->
 
   <!-- padding section -->
-  <section class="section-pad pad-me-blue">
+  <div class="section-pad pad-me-blue">
     <figure data-scroll>
       <a title="me: shakex sempe" href="#contact">
         <img src="img/shakexblue-min.jpg" loading="lazy" alt="screens">
       </a>
     </figure>
-  </section>
+  </div>
   <!-- end of padding section -->
 
   <!--Contact Section-->
@@ -438,7 +433,7 @@
       </div>
       <div class="contact-items">
 
-        <div title="location" data-scroll class="contact-item">
+        <article title="location" data-scroll class="contact-item">
           <div class="icon">
             <i class="fas fa-map-marked-alt"></i>
             <!-- <img src="/icons/icons8-address-64.png" alt="img" srcset="https://img.icons8.com/nolan/64/address.png" /> -->
@@ -448,9 +443,9 @@
             <h2>Mahikeng, North West.<span>South Africa</span></h2>
             <a href="https://goo.gl/maps/8XfqHABUeWN6oEjB6" title="view in google maps" target="_blank"><i class="fas fa-map-pin"></i>..where?</a>
           </div>
-        </div>
+        </article>
 
-        <div title="email" data-scroll class="contact-item">
+        <article title="email" data-scroll class="contact-item">
           <div class="icon">
             <i class="fas fa-envelope"></i>
           </div>
@@ -459,9 +454,9 @@
             <h2>bshakex@gmail.com</h2>
             <a href="mailto:bshakex@gmail.com" title="send email to Shakex"><i class="fas fa-at"></i> ..email me</a>
           </div>
-        </div>
+        </article>
 
-        <div title="phone details" data-scroll class="contact-item">
+        <article title="phone details" data-scroll class="contact-item">
           <div class="icon">
             <i class="fas fa-phone-alt"></i>
           </div>
@@ -470,7 +465,7 @@
             <h2>+27 72 600 5104</h2>
             <a href="tel:0726005104" title="call Shakex"><i class="fas fa-phone-alt"></i> ..call me</a>
           </div>
-        </div>
+        </article>
 
 
 
@@ -480,23 +475,23 @@
   <!--End of Contact Section-->
 
   <!-- padding section -->
-  <section id="footer-logo" class="section-pad pad-logo">
+  <div id="footer-logo" class="section-pad pad-logo">
     <figure data-scroll>
       <a title="shakex sempe: web developer" href="#footer">
         <img src="img/shakex-logo-min.png" loading="lazy" alt="shakex sempe logo">
       </a>
     </figure>
-  </section>
+  </div>
   <!-- end of padding section -->
 
   <!--Footer-->
-  <footer class="link-section" id="footer">
+  <section class="link-section" id="footer">
     <div class="footer container">
       
       <!-- social media links -->
-      <section class="socialMedia-links">
+      <div class="socialMedia-links">
         <h1 data-scroll title="social media links" class="footer-section-title">my links</h1>
-        <section class="links-grid">
+        <div class="links-grid">
       <!-- social media link -->
       <div class="socialMedia-item codepen">
         <p class="link-icon">codePen</p>
@@ -548,9 +543,9 @@
             </a>
           </div>
           <!-- end of social media link -->
-        </section>
+        </div>
 
-      </section>
+      </div>
       <!-- end of social media links -->
 <!-- contact form -->
 <form   class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com" method="POST">
@@ -591,7 +586,7 @@
       </div>
     </div>
 
-  </footer>
+  </section>
   <!--End of Footer-->
   <!--back to top button-->
   <a href="#home" title="home" class="scroll-link top-link">
