--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               </a>
             </div>
             <ul class="links">
-              <li >
+              <li class="active">
                 <i class="fas fa-lightbulb"></i>
                 <a href="#skills" title="web development skills" data-after="skills"class="scroll-link scroll-li">skills</a>
               </li>
@@ -118,8 +118,7 @@
         </button>
       </div>
     </div>
-  </section>
-  <!-- End of Hero Section-->
+  
 
 <!-- padding section -->
 <div id="hero-logo" class="section-pad pad-logo">
@@ -130,6 +129,8 @@
   </figure>
 </div>
 <!-- end of padding section -->
+</section>
+<!-- End of Hero Section-->
 
   <!--Skills section-->
   <section class="link-section" id="skills">
@@ -333,9 +334,6 @@
       </figure>
       <!-- end of skills img -->
     </div>
-  </section>
-  <!--End of Skills section-->
-
   <!-- padding section -->
   <div id="projects-pad" class="section-pad pad-intro">
     <figure data-scroll>
@@ -345,6 +343,10 @@
     </figure>
   </div>
   <!-- end of padding section -->
+  </section>
+  <!--End of Skills section-->
+
+  
 
   <!--Projects Section-->
   <section class="link-section" id="projects">
@@ -358,19 +360,20 @@
   </section>
   <!--End of Projects Section-->
 
-  <!-- padding section -->
+  
+
+  <!--About Section-->
+  <section class="link-section" id="about">
+    <!-- padding section -->
   <div class="section-pad pad-me">
     <figure data-scroll>
-      <a title="me: boitumelo sempe" href="#about">
+      <a title="me: boitumelo sempe" href="#about-target">
         <img src="img/me-min.jpg" loading="lazy" alt="screens">
       </a>
     </figure>
   </div>
   <!-- end of padding section -->
-
-  <!--About Section-->
-  <section class="link-section" id="about">
-    <div class="about container">
+    <div id="about-target" class="about container">
       <div data-scroll class="col-right">
         <div class="about-header">
           <h1 title="about me: boitumelo sempe" data-text="aboutme" class="section-title">About<span>me</span></h1>
@@ -416,17 +419,18 @@
   <!--End of About Section-->
 
   <!-- padding section -->
-  <div class="section-pad pad-me-blue">
+  <!-- <div class="section-pad pad-me-blue">
     <figure data-scroll>
       <a title="me: shakex sempe" href="#contact">
         <img src="img/shakexblue-min.jpg" loading="lazy" alt="screens">
       </a>
     </figure>
-  </div>
+  </div> -->
   <!-- end of padding section -->
 
   <!--Contact Section-->
   <section class="link-section" id="contact">
+    
     <div class="contact container">
       <div class="contact-header">
         <h1 title="contact infomation" data-text="contactinfo" class="section-title">Contact<span>Info</span></h1>
@@ -471,10 +475,7 @@
 
       </div>
     </div>
-  </section>
-  <!--End of Contact Section-->
-
-  <!-- padding section -->
+    <!-- padding section -->
   <div id="footer-logo" class="section-pad pad-logo">
     <figure data-scroll>
       <a title="shakex sempe: web developer" href="#footer">
@@ -483,6 +484,10 @@
     </figure>
   </div>
   <!-- end of padding section -->
+  </section>
+  <!--End of Contact Section-->
+
+  
 
   <!--Footer-->
   <section class="link-section" id="footer">
@@ -585,14 +590,15 @@
         <span id="date"></span>
       </div>
     </div>
+  <!--back to top button-->
 
+    <a href="#home" title="home" class="scroll-link top-link">
+      <i class="fas fa-arrow-up"></i>
+    </a>
+    <!--end of back to top button-->
   </section>
   <!--End of Footer-->
-  <!--back to top button-->
-  <a href="#home" title="home" class="scroll-link top-link">
-    <i class="fas fa-arrow-up"></i>
-  </a>
-  <!--end of back to top button-->
+  
 
 
   <script src="js/app.js"></script>
