progress bar color

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
               </a>
             </div>
             <ul class="links">
-              <li class="active">
+              <li >
                 <i class="fas fa-lightbulb"></i>
                 <a href="#skills" title="web development skills" data-after="skills"class="scroll-link scroll-li">skills</a>
               </li>
               
               <li>
-                <i class="fab fa-github active"></i>
+                <i class="fab fa-github"></i>
                 <a href="#projects" title="github repositories" data-after="Projects" class="scroll-link scroll-li">projects</a>
               </li>
 
