idex image alt tags

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="links-container">
             <div class="nav-logo">
               <a href="#home" id="nav-logo">
-                <img src="img/shakex-logo-min.png" alt="logo" loading="lazy">
+                <img src="img/shakex-logo-min.png" alt="Shakex Sempe logo" loading="lazy">
               </a>
             </div>
             <ul class="links">
@@ -330,7 +330,7 @@
       </div>
       <!-- skills img -->
       <figure title="Responsive Web Design" data-scroll class="git-img">
-        <img src="img/syntex-1.jpg" alt="github progress">
+        <img src="img/syntex-1.jpg" alt="responsive web design devices">
       </figure>
       <!-- end of skills img -->
     </div>
@@ -338,7 +338,7 @@
   <div id="projects-pad" class="section-pad pad-intro">
     <figure data-scroll>
       <a title="github contribution activity" href="#projects">
-        <img src="img/git-min.png" loading="lazy" alt="screens">
+        <img src="img/git-min.png" loading="lazy" alt="github contribution activity">
       </a>
     </figure>
   </div>
@@ -368,7 +368,7 @@
   <div class="section-pad pad-me">
     <figure data-scroll>
       <a title="me: boitumelo sempe" href="#about-target">
-        <img src="img/me-min.jpg" loading="lazy" alt="screens">
+        <img src="img/me-min.jpg" loading="lazy" alt="Boitumelo Sempe">
       </a>
     </figure>
   </div>
@@ -433,14 +433,13 @@
     
     <div class="contact container">
       <div class="contact-header">
-        <h1 title="contact infomation" data-text="contactinfo" class="section-title">Contact<span>Info</span></h1>
+        <h1 title="contact information" data-text="contactinfo" class="section-title">Contact<span>Info</span></h1>
       </div>
       <div class="contact-items">
 
         <article title="location" data-scroll class="contact-item">
           <div class="icon">
             <i class="fas fa-map-marked-alt"></i>
-            <!-- <img src="/icons/icons8-address-64.png" alt="img" srcset="https://img.icons8.com/nolan/64/address.png" /> -->
           </div>
           <h1>Address</h1>
           <div class="contact-info">
@@ -479,7 +478,7 @@
   <div id="footer-logo" class="section-pad pad-logo">
     <figure data-scroll>
       <a title="shakex sempe: web developer" href="#footer">
-        <img src="img/shakex-logo-min.png" loading="lazy" alt="shakex sempe logo">
+        <img src="img/shakex-logo-min.png" loading="lazy" alt="Shakex Sempe logo">
       </a>
     </figure>
   </div>
