about section spell check

--- a/index.html
+++ b/index.html
@@ -346,8 +346,6 @@
   </section>
   <!--End of Skills section-->
 
-  
-
   <!--Projects Section-->
   <section class="link-section" id="projects">
     <div class="projects container">
@@ -359,8 +357,6 @@
       </div>
   </section>
   <!--End of Projects Section-->
-
-  
 
   <!--About Section-->
   <section class="link-section" id="about">
@@ -392,7 +388,7 @@
           </p>
 
           <p class="about-body" id="about-body">I code responsive web pages suitable for devices ranging
-            from small mobile screens to large desktop screens. My preferred tool for building and maintaining stylesheets is Sass while I 
+            from small mobile screens to large desktop screens. My preferred tool for building and maintaining stylesheets is Sass while 
             I use HTML Semantic Markup and On-Page Search Engine Optimization techniques to grow website views,
             essential for online presence and web traffic to the site by potential customers and clients.
           </p>
@@ -485,8 +481,6 @@
   <!-- end of padding section -->
   </section>
   <!--End of Contact Section-->
-
-  
 
   <!--Footer-->
   <section class="link-section" id="footer">
@@ -597,8 +591,6 @@
     <!--end of back to top button-->
   </section>
   <!--End of Footer-->
-  
-
 
   <script src="js/app.js"></script>
   <script src="js/projects.js"></script>
