--- a/index.html
+++ b/index.html
@@ -575,11 +575,9 @@
 </form>
 <!-- end of contact form -->
 
-
-
       <div id="bs21">
         <p>copyright&copy; Boitumelo Sempe.</p>
-        <p><span>shakex sempe</span> </p>
+        <a title="Shakex Sempe" href="#about">shakex sempe</a>
         <span id="date"></span>
       </div>
     </div>
