--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
           <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title='linkedin' target="_blank" class="fcc-link">
             <i class="fab fa-linkedin-in" aria-hidden="true"></i>Linkedin
           </a>
-          <a href="./cv/b-sempe-cv-2021.pdf" title="download cv" target="_blank" class="fcc-link">
+          <a href="forms/form.html" title="download cv" target="_blank" class="fcc-link">
             <i class="fas fa-user-graduate"></i>cv
           </a>
           <a href="https://github.com/ShakexSempe" title="github" target="_blank" id="profile-link">
