--- a/index.html
+++ b/index.html
@@ -403,8 +403,8 @@
           <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title='linkedin' target="_blank" class="fcc-link">
             <i class="fab fa-linkedin-in" aria-hidden="true"></i>Linkedin
           </a>
-          <a href="forms/form.html" title="download cv" target="_blank" class="fcc-link">
-            <i class="fas fa-user-graduate"></i>cv
+          <a href="forms/form.html" title="request cv" target="_blank" class="fcc-link">
+            <i class="fas fa-user-graduate"></i>request cv
           </a>
           <a href="https://github.com/ShakexSempe" title="github" target="_blank" id="profile-link">
             <i class="fab fa-github"></i>github
