form tab indicies

--- a/forms/form.html
+++ b/forms/form.html
@@ -97,7 +97,7 @@
                             </select>
                         </div>
                         <div class="field">
-                            <button class="firstNext next">Next</button>
+                            <button tabindex="3" class="firstNext next">Next</button>
                         </div>
                     </div>
                     <div class="page">
@@ -109,7 +109,7 @@
                             <p>I'm also open to work as part of a startup or freelance team.</p>
                         </div>
                         <div class="field">
-                            <select tabindex="5" name="work">
+                            <select tabindex="4" name="work">
                                 <option selected="selected" disabled="disabled">Service / Job Title</option>
                                 <option>Front Web Developer</option>
                                 <option>Junior Web Developer</option>
@@ -119,7 +119,7 @@
                         </div>
                         <div class="field btns">
                             <button class="prev-1 prev">Previous</button>
-                            <button class="next-1 next">Next</button>
+                            <button tabindex="5" class="next-1 next">Next</button>
                         </div>
                     </div>
 
@@ -131,18 +131,18 @@
                             <div class="label">
                                 Email Address*
                             </div>
-                            <input tabindex="3" type="email" name="email" required
+                            <input tabindex="6" type="email" name="email" required
                                 placeholder="eg. youremail@email.com">
                         </div>
                         <div class="field">
                             <div class="label">
                                 Phone Number
                             </div>
-                            <input tabindex="4" type="tel" minlength="10" placeholder="phone number" required>
+                            <input tabindex="7" type="tel" minlength="10" placeholder="phone number" required>
                         </div>
                         <div class="field btns">
                             <button class="prev-2 prev">Previous</button>
-                            <button class="next-2 next">Next</button>
+                            <button tabindex="8" class="next-2 next">Next</button>
                         </div>
                     </div>
                     
@@ -154,7 +154,7 @@
                             <div class="label">
                                 Leave a message or request CV
                             </div>
-                            <textarea tabindex="6" 
+                            <textarea tabindex="9" 
                             name="Message" 
                             id="textarea" cols="50" rows="50"
                             minlength="2"
@@ -162,7 +162,7 @@
                         </div>
                         <div class="field btns">
                             <button class="prev-3 prev">Previous</button>
-                            <button type="submit" class="submit">Submit</button>
+                            <button tabindex="15"type="submit" class="submit">Submit</button>
                         </div>
                     </div>
                     <!-- form options -->
