--- a/index.html
+++ b/index.html
@@ -414,16 +414,6 @@
   </section>
   <!--End of About Section-->
 
-  <!-- padding section -->
-  <!-- <div class="section-pad pad-me-blue">
-    <figure data-scroll>
-      <a title="me: shakex sempe" href="#contact">
-        <img src="img/shakexblue-min.jpg" loading="lazy" alt="screens">
-      </a>
-    </figure>
-  </div> -->
-  <!-- end of padding section -->
-
   <!--Contact Section-->
   <section class="link-section" id="contact">
     
@@ -575,10 +565,10 @@
 </form>
 <!-- end of contact form -->
 
-      <div id="bs21">
+      <div class="bs21">
         <p>copyright&copy; Boitumelo Sempe.</p>
         <a title="Shakex Sempe" href="#about">shakex sempe</a>
-        <span id="date"></span>
+        <span class="date"></span>
       </div>
     </div>
   <!--back to top button-->
