--- a/thanks.html
+++ b/thanks.html
@@ -79,36 +79,23 @@
             <!-- end of social media links -->
 
 
-            <div id="bs21">
+            <div class="bs21">
                 <p>copyright&copy; Boitumelo Sempe.</p>
-                <p><span>s</span>hakex <span>s</span>empe</p>
-                <span style="color: #fff;" id="footer-date"></span>
+                <a title="Shakex Sempe" href="#about">shakex sempe</a>
+                <span class="date" id="thanks-date"></span>
             </div>
         </div>
 
     </footer>
     <!--End of Footer-->
-    <!--back to top button-->
-    <a href="#home" class="scroll-link top-link">
-        <i class="fas fa-arrow-up"></i>
-    </a>
-    <!--end of back to top button-->
 
     <!-- date -->
     <script>
-        let thanksDate = document.getElementById("footer-date");
-        thanksDate.innerHTML = new Date().getFullYear();
+        const date = document.getElementById("thanks-date");
+        date.innerHTML = new Date().getFullYear();
     </script>
     <!-- end of date -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-    </script>
-    <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"
-        integrity="sha512-2hIlk2fL+NNHkULe9gGdma/T5vSYk80U5tvAFSy3dGEl8XD4h2i6frQvHv5B+bm/Itmi8nJ6krAcj5FWFcBGig=="
-        crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
-    <script src="js/projects.js"></script>
+    
 </body>
 
 </html>
