index, for and thanks.html head

--- a/forms/form.html
+++ b/forms/form.html
@@ -2,17 +2,34 @@
 <html lang="en">
 
 <head>
+    <!-- META CHARSET -->
     <meta charset="UTF-8" />
+    <!-- META VIEWPORT -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- META THEME COLOR -->
     <meta name="theme-color" content="#29323c" />
-    <title>ShakexSempe Portfolio Page</title>
+    <!-- META OG IMAGE -->
+    <meta name="image" property="og:image" content="https://shakexsempe.netlify.app/img/shakex-logo-min.png">
+
+    <!-- TITLE -->
+    <title>Form: Shakex Sempe - Front End Developer - Personal Portfolio Page</title>
+    <!--  -->
+    <!-- META DESCRIPTION -->
+    <meta name="description"
+        content="Boitumelo Shakex Sempe is a South Africa based front-end Web developer. 
+                    This Personal Portfolio Page contains links to github repositories, information about web development skills, contact info , social media links and web development learning platform links">
+    <!-- META KEYWORDS -->
+    <meta name="keywords"
+        content="HTML, HTML FORM, HTML5, CSS, CSS3, JAVASCRIPT, JS, WEB DEVELOPMENT, SASS, FRONT-END DEVELOPMENT, south africa, react, vanilla javascript, Responsive web design, remote, freelance">
+    <!-- META AUTHOR -->
+    <meta name="author" content="Boitumelo Shakex Sempe">
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="../icons/favicon.ico">
+    <!-- CSS LINK -->
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/form.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" defer />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css"
-        integrity="sha512-6qkvBbDyl5TDJtNJiC8foyEVuB6gxMBkrKy67XpqnIDxyvLLPJzmTjAj1dRJfNdmXWqD10VbJoeN4pOQqDwvRA=="
-        crossorigin="anonymous" defer>
+    
 </head>
 
 <body>
@@ -230,7 +247,7 @@
             <!-- end of social media links -->
             <div class="bs21">
                 <p>copyright&copy; Boitumelo Sempe.</p>
-                <a title="Shakex Sempe" href="../index.html">shakex sempe</a>
+                <a title="Shakex Sempe" href="#about">shakex sempe</a>
                 <span class="date" id="form-date"></span>
               </div>
         </div>
