--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 
   <div class="input-div">
     <label for="name">name :</label>
-    <input type="text" name="username" id="username" placeholder="name & surname.." required minlength="2">
+    <input type="text" name="name and lastname" id="username" placeholder="name & surname.." required minlength="2">
   </div>
 
   <div class="input-div">
@@ -551,7 +551,7 @@
 
   <div class="input-div">
     <label for="message">message :</label>
-    <textarea rows="3" cols="50" name="message" placeholder="leave a message..." id="message" required></textarea>
+    <textarea rows="3" cols="50" minlength="2" name="message" placeholder="leave a message..." id="message" required></textarea>
   </div>
 
   <button type="submit" title="submit contact form">send email</button>
