removed first section pad and form width media query

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </h1>
 
         <h1 id="aka"><span>a.k.a</span></h1>
-        <button href="#hero-logo" type="button" title="Shakex Sempe: Web Developer"  id="cta-header" class="scroll-link">
+        <button href="#skills" type="button" title="Shakex Sempe: Web Developer"  id="cta-header" class="scroll-link">
           <span style="--i:1;">s</span>
           <span style="--i:2;">h</span>
           <span style="--i:3;">a</span>
@@ -121,13 +121,13 @@
   
 
 <!-- padding section -->
-<div id="hero-logo" class="section-pad pad-logo">
+<!-- <div id="hero-logo" class="section-pad pad-logo">
   <figure data-scroll>
     <a title="Shakex Sempe: front end web developer" href="#skills">
       <img src="img/shakex-logo-min.png" loading="lazy" alt="shakex sempe logo">
     </a>
   </figure>
-</div>
+</div> -->
 <!-- end of padding section -->
 </section>
 <!-- End of Hero Section-->
