about article data scroll

--- a/index.html
+++ b/index.html
@@ -370,10 +370,11 @@
   </div>
   <!-- end of padding section -->
     <div id="about-target" class="about container">
-      <div data-scroll class="col-right">
+      <div class="col-right">
         <div class="about-header">
           <h1 title="about me: boitumelo sempe" data-text="aboutme" class="section-title">About<span>me</span></h1>
         </div>
+        <div data-scroll>
         <article class="about-article">
           <p id="intro">Boitumelo 'Shakex' Sempe is a Front-End Web Developer and an International Relations Graduate
             from University of Pretoria
@@ -410,6 +411,7 @@
             <i class="fab fa-github"></i>github
           </a>
         </article>
+      </div>
       </div>
   </section>
   <!--End of About Section-->
