skill-section title tags

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <div data-scroll class="skills-top">
         <p>
           I'm a Front End Developer focused on Responsive Web Design and UX Design.<br>
-          I code immersive webpages using HTML5 semantic markup and advanced CSS3.
+          I code immersive webpages using HTML5 semantic markup, advanced CSS3 and Javascript.
           <br><br><span>View my full skill set in the dropdown section below.</span>
         </p>
       </div>
@@ -152,7 +152,7 @@
 
           <div class="skills-bottom">
 
-            <div  data-scroll id="html5" class="skills-item">
+            <div title="HTML5" data-scroll id="html5" class="skills-item">
               <div class="icon">
                 <i class="fab fa-html5" alt="icon"></i>
               </div>
@@ -164,7 +164,7 @@
               </ul>
             </div>
 
-            <div data-scroll class="skills-item">
+            <div title="CSS3" data-scroll class="skills-item">
               <div class="icon">
                 <i class="fab fa-css3-alt"></i>
               </div>
@@ -177,7 +177,7 @@
               </ul>
             </div>
 
-            <div data-scroll class="skills-item">
+            <div title="Javascript" data-scroll class="skills-item">
               <div class="icon">
                 <i class="fab fa-js-square"></i>
               </div>
@@ -190,7 +190,7 @@
               <p> </p>
             </div>
 
-            <div data-scroll class="skills-item">
+            <div title="Node-js" data-scroll class="skills-item">
               <div class="icon">
                 <i class="fab fa-node-js"></i>
               </div>
@@ -200,7 +200,7 @@
                 <li>express JS</li>
               </ul>
             </div>
-            <div data-scroll class="skills-item">
+            <div title="Bootstrap" data-scroll class="skills-item">
               <div class="icon">
                 <i class="fab fa-bootstrap"></i>
               </div>
@@ -210,7 +210,7 @@
               </ul>
             </div>
 
-            <div data-scroll class="skills-item">
+            <div title="Sass" data-scroll class="skills-item">
               <div class="icon">
                 <i class="fab fa-sass"></i>
               </div>
@@ -222,7 +222,7 @@
               </ul>
             </div>
 
-            <div data-scroll class="skills-item">
+            <div title="React-js" data-scroll class="skills-item">
               <div class="icon">
                 <i class="fab fa-react"></i>
               </div>
@@ -232,7 +232,7 @@
               </ul>
             </div>
 
-            <div data-scroll class="skills-item">
+            <div title="Redux" data-scroll class="skills-item">
               <div class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
                     width="50" height="50"
@@ -245,7 +245,7 @@
               </ul>
             </div>
 
-            <div data-scroll class="skills-item">
+            <div title="Mongo-db" data-scroll class="skills-item">
               <div class="icon">
                 <i class="fas fa-leaf" alt="icon"></i> 
               </div>
@@ -256,7 +256,7 @@
               </ul>
             </div>
 
-            <div data-scroll class="skills-item">
+            <div title="Git" data-scroll class="skills-item">
               <div id="git-icon" class="icon">
                 <i class="fab fa-git-alt"></i>
               </div>
@@ -266,7 +266,7 @@
               </ul>
             </div>
 
-            <div data-scroll class="skills-item">
+            <div title="Github" data-scroll class="skills-item">
               <div id="github-icon" class="icon">
                 <i class="fab fa-github"></i>
               </div>
@@ -276,7 +276,7 @@
               </ul>
             </div>
 
-            <div data-scroll class="skills-item">
+            <div title="Heroku" data-scroll class="skills-item">
               <div class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
                     width="50" height="50"
@@ -289,7 +289,7 @@
               </ul>
             </div>
 
-            <div data-scroll class="skills-item">
+            <div title="Netlify" data-scroll class="skills-item">
               <div id="netlify-icon" class="icon">
                   <img src="icons/netlify_logo_icon_145039.svg" alt="netlify">
               </div>
@@ -300,7 +300,7 @@
               </ul>
             </div>
 
-            <div data-scroll class="skills-item">
+            <div title="Customer Care" data-scroll class="skills-item">
               <div class="icon">
                 <i class="fas fa-headset"></i>
               </div>
@@ -312,7 +312,7 @@
               </ul>
             </div>
 
-            <div data-scroll class="skills-item">
+            <div title="visual Studio Code" data-scroll class="skills-item">
               <div class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
                   width="50" height="50"
