article-container data-scroll

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
         <div class="about-header">
           <h1 title="about me: boitumelo sempe" data-text="aboutme" class="section-title">About<span>me</span></h1>
         </div>
-        <div data-scroll>
+        <div class="article-container" data-scroll>
         <article class="about-article">
           <p id="intro">Boitumelo 'Shakex' Sempe is a Front-End Web Developer and an International Relations Graduate
             from University of Pretoria
