--- a/index.html
+++ b/index.html
@@ -24,7 +24,21 @@
   <!-- META AUTHOR -->
   <meta name="author" content="Boitumelo Shakex Sempe">
   <!-- FAVICON -->
-  <link rel="shortcut icon" href="icons/favicon.ico">
+  <!-- <link rel="shortcut icon" href="icons/favicon.ico"> -->
+  <link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="icons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="icons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="icons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="icons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="icons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="icons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="icons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="icons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+  <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" defer />
 </head>
@@ -120,15 +134,7 @@
     </div>
   
 
-<!-- padding section -->
-<!-- <div id="hero-logo" class="section-pad pad-logo">
-  <figure data-scroll>
-    <a title="Shakex Sempe: front end web developer" href="#skills">
-      <img src="img/shakex-logo-min.png" loading="lazy" alt="shakex sempe logo">
-    </a>
-  </figure>
-</div> -->
-<!-- end of padding section -->
+
 </section>
 <!-- End of Hero Section-->
 
