--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
           <h1>Email</h1>
           <div class="contact-info">
             <h2>bshakex@gmail.com</h2>
-            <a href="mailto:bshakex@gmail.com" title="send email to Shakex"><i class="fas fa-at"></i> ..email me</a>
+            <a href="mailto:shakex@syntex.co.za" title="send email to Shakex"><i class="fas fa-at"></i> ..email me</a>
           </div>
         </article>
 
@@ -555,7 +555,7 @@
       </div>
       <!-- end of social media links -->
 <!-- contact form -->
-<form   class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com" method="POST">
+<form   class="contact-form" target="_blank" action="https://formsubmit.co/shakexsempe@syntex.co.za" method="POST">
   <h1 data-scroll class="footer-section-title contact">Get In Touch</h1>
 
   <div class="input-div">
